vertical align fixed

--- a/src/components/LineView/RiskTable.css
+++ b/src/components/LineView/RiskTable.css
@@ -8,7 +8,7 @@
     /* border-collapse: none; */
     /* text-align: left; */
     margin-top: 3%;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     /* font-size: 1em; */
 }
 
